--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "turbo run dev",
     "format": "turbo run format",
     "format:check": "turbo run format:check",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "web": "pnpm --filter=frontend"
   },
   "packageManager": "pnpm@8.13.1",
   "engines": {
