--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ark-ui/react": "^1.2.1",
+    "@tanstack/react-query": "^5.17.9",
     "lucide-react": "^0.306.0",
     "next": "14.0.4",
     "react": "^18",
