--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@pandacss/dev": "^0.23.0",
     "@park-ui/panda-preset": "^0.27.0",
+    "@tanstack/eslint-plugin-query": "^5.17.7",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
